--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         HELLO
         <br/>
         WELCOME TO MACHINE LEARNING PROJECT
+        <br />
+        Machine Learning Project for Machine Learning Class YZM 3226.
     </h1>
 </body>
 </html>
