--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <br/>
         WELCOME TO MACHINE LEARNING PROJECT
         <br />
-        Machine Learning Project for Machine Learning Class YZM 3226.
+        Machine Learning Project for Machine Learning Class YZM 3226
     </h1>
+    <a href="/personal-storage-website/index.html">personal website</a>
 </body>
 </html>
