--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <br />
         Machine Learning Project for Machine Learning Class YZM 3226
     </h1>
-    <a href="/personal-storage-website/index.html">personal website</a>
+    <a href="./test/index.html">personal website</a>
 </body>
 </html>
