--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machine Learning Project</title>
-</head>
-<body>
-    <h1>
-        HELLO
-        <br/>
-        WELCOME TO MACHINE LEARNING PROJECT
-        <br />
-        Machine Learning Project for Machine Learning Class YZM 3226
-    </h1>
-    <a href="./test/index.html">personal website</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Storage of leidorf</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body id="wrapper">
+    <h1>Welcome to my work storage</h1>
+    <div>
+      <ul>
+        <li>
+          <a href="./machine-learning-project/index.html"
+            >machine learing project</a
+          >
+        </li>
+        <li><a href="works/works.html">Works</a></li>
+      </ul>
+    </div>
+
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          I am interested in cybersecurity, media art, internet art, internet
+          privacy, copyleft, FOSS and existentialism.
+        </p>
+      </section>
+      <section id="Contact">
+        <h2>Contact</h2>
+        <a href="mailto:dagguray@gmail.com">My Email</a>
+      </section>
+    </main>
+
+    <div id="footer">
+      <a href="/leidorf-github.io/index.html">Home</a>
+      <p>
+        <span
+          class="copyleft"
+          style="display: inline-block; transform: rotate(180deg)"
+          >&copy;</span
+        >
+        2023 Storage of leidorf
+      </p>
+    </div>
+  </body>
 </html>
