--- a/machine-learning-project/index.html
+++ b/machine-learning-project/index.html
@@ -18,7 +18,7 @@
     </h1>
 
     <div id="footer">
-      <a href="/leidorf-github.io/index.html">Home</a>
+      <a href="https://leidorf.github.io/">Home</a>
       <p>
         <span
           class="copyleft"
