--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </main>
 
     <div id="footer">
-      <a href="/leidorf-github.io/index.html">Home</a>
+      <a href="https://leidorf.github.io/">Home</a>
       <p>
         <span
           class="copyleft"
