--- a/works/works.html
+++ b/works/works.html
@@ -32,7 +32,7 @@
     </main>
 
     <div id="footer">
-      <a href="/leidorf-github.io/index.html">Home</a>
+      <a href="https://leidorf.github.io/">Home</a>
       <p>
         <span
           class="copyleft"
