added poems page and refactored

--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body id="wrapper">
-    <h1>Welcome to my work storage</h1>
-    <div>
-      <ul>
-        <li>
-          <a href="./machine-learning-project/index.html"
-            >machine learing project</a
-          >
-        </li>
-        <li><a href="works/works.html">Works</a></li>
-      </ul>
-    </div>
+    <header>Welcome to my work storage</header>
 
     <main>
+      <div>
+        <ul>
+          <li>
+            <a href="./machine-learning-project/index.html"
+              >machine learing project</a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/leidorf/Dada-poem-generator">
+              Dada-poem-generator
+            </a>
+          </li>
+          <li><a href="works/works.html">Works</a></li>
+        </ul>
+      </div>
+
       <section id="about">
         <h2>About Me</h2>
         <p>
@@ -27,6 +33,7 @@
           privacy, copyleft, FOSS and existentialism.
         </p>
       </section>
+
       <section id="Contact">
         <h2>Contact</h2>
         <a href="mailto:dagguray@gmail.com">My Email</a>
@@ -35,6 +42,7 @@
 
     <div id="footer">
       <a href="https://leidorf.github.io/">Home</a>
+      <a href="https://github.com/leidorf">github</a>
       <p>
         <span
           class="copyleft"
