--- a/works/poems/poems.html
+++ b/works/poems/poems.html
@@ -47,6 +47,7 @@
 
     <div id="footer">
       <a href="https://leidorf.github.io/">Home</a>
+      <a href="https://github.com/leidorf">github</a>
       <p>
         <span
           class="copyleft"
