poem generator added

--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
       <div>
         <ul>
           <li>
-            <a href="./machine-learning-project/index.html"
-              >machine learing project</a
+            <a href="./dada-poem-generator/index.html"
+              >dada poem generator</a
             >
-          </li>
-          <li>
-            <a href="https://github.com/leidorf/Dada-poem-generator">
-              Dada-poem-generator
-            </a>
           </li>
           <li><a href="works/works.html">Works</a></li>
         </ul>
@@ -29,15 +24,11 @@
       <section id="about">
         <h2>About Me</h2>
         <p>
-          I am interested in cybersecurity, media art, internet art, internet
-          privacy, copyleft, FOSS and existentialism.
+          I am interested in cybersecurity, art, internet privacy, copyleft,
+          FOSS and existentialism.
         </p>
       </section>
 
-      <section id="Contact">
-        <h2>Contact</h2>
-        <a href="mailto:dagguray@gmail.com">My Email</a>
-      </section>
     </main>
 
     <div id="footer">
