--- a/works/poems/poems.html
+++ b/works/poems/poems.html
@@ -21,28 +21,18 @@
             >Defteri Tevessül Yapıyor</a
           >
         </li>
+        <li>
+          <a href="./poems/oldurma-isi.txt"
+            >Oldurma İşi</a
+          >
+        </li>
+        <li>
+          <a href="./poems/ozgul-ozgurluk.txt"
+            >Özgül Özgürlük</a
+          >
+        </li>
       </ul>
       <br />
-      <div>
-        <p>
-          TO MAKE A DADAIST POEM<br />
-          Take a newspaper.<br />
-          Take some scissors.<br />
-          Choose from this paper an article of the length you want to make your
-          poem.<br />
-          Cut out the article.<br />
-          Next carefully cut out each of the words that makes up this article
-          and put them all in a bag.<br />
-          Shake gently.<br />
-          Next take out each cutting one after the other.<br />
-          Copy conscientiously in the order in which they left the bag.<br />
-          The poem will resemble you.<br />
-          And there you are—an infinitely original author of charming
-          sensibility, even though unappreciated by the vulgar herd.<br />
-          —Tristan Tzara, 1920
-        </p>
-        <a href="https://github.com/leidorf/Dada-poem-generator">Dada-poem-generator</a>
-      </div>
     </main>
 
     <div id="footer">
